// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile: Component should render correctly 1`] = `
<Fragment>
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="First Name"
        id="userProfile.firstNameLabel"
        values={Object {}}
      />
    }
    name="firstName"
    onChange={[Function]}
    touched={Object {}}
    value="FirstName"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="Last Name"
        id="userProfile.lastNameLabel"
        values={Object {}}
      />
    }
    name="lastName"
    onChange={[Function]}
    touched={Object {}}
    value="LastName"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="Email"
        id="userProfile.emailLabel"
        values={Object {}}
      />
    }
    name="email"
    onChange={[Function]}
    touched={Object {}}
    value="email@example.com"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="Role"
        id="userProfile.roleLabel"
        values={Object {}}
      />
    }
    name="role"
    onChange={[Function]}
    touched={Object {}}
    value="editor"
  />
</Fragment>
`;

exports[`UserProfile: Component should render correctly current user 1`] = `
<Fragment>
  <TextInput
    checkOnlyErrors={false}
    disabled={false}
    errors={Object {}}
    fullWidth={true}
    isEdit={true}
    label={
      <FormattedMessage
        defaultMessage="First Name"
        id="userProfile.firstNameLabel"
        values={Object {}}
      />
    }
    name="firstName"
    onChange={[Function]}
    touched={Object {}}
    value="FirstName"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={false}
    errors={Object {}}
    fullWidth={true}
    isEdit={true}
    label={
      <FormattedMessage
        defaultMessage="Last Name"
        id="userProfile.lastNameLabel"
        values={Object {}}
      />
    }
    name="lastName"
    onChange={[Function]}
    touched={Object {}}
    value="LastName"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="Email"
        id="userProfile.emailLabel"
        values={Object {}}
      />
    }
    name="email"
    onChange={[Function]}
    touched={Object {}}
    value="email@example.com"
  />
  <TextInput
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <FormattedMessage
        defaultMessage="Role"
        id="userProfile.roleLabel"
        values={Object {}}
      />
    }
    name="role"
    onChange={[Function]}
    touched={Object {}}
    value="editor"
  />
</Fragment>
`;
